fix: add missing paging information in openapi schema
